syntax = "proto3";

package chat3.user;

import "google/protobuf/struct.proto";

// Сервис для работы с пользователями
service Chat3UserService {
  // Получить диалоги пользователя
  rpc GetUserDialogs(GetUserDialogsRequest) returns (GetUserDialogsResponse);
  
  // Получить сообщения диалога
  rpc GetDialogMessages(GetDialogMessagesRequest) returns (GetDialogMessagesResponse);
  
  // Отправить сообщение
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
  
  // Подписка на обновления (server streaming)
  // Первое сообщение - Update с eventType="connection.established" и connId в data
  rpc SubscribeUpdates(SubscribeUpdatesRequest) returns (stream Update);
}

// Запрос получения диалогов пользователя
message GetUserDialogsRequest {
  int32 page = 1;
  int32 limit = 2;
  string filter = 3;
  string sort = 4;
  bool include_last_message = 5;
}

// Ответ с диалогами пользователя
message GetUserDialogsResponse {
  repeated Dialog dialogs = 1;
  Pagination pagination = 2;
}

// Запрос получения сообщений диалога
message GetDialogMessagesRequest {
  string dialog_id = 1;
  int32 page = 2;
  int32 limit = 3;
  string filter = 4;
  string sort = 5;
}

// Ответ с сообщениями диалога
message GetDialogMessagesResponse {
  repeated Message messages = 1;
  Pagination pagination = 2;
}

// Запрос отправки сообщения
message SendMessageRequest {
  string dialog_id = 1;
  string sender_id = 2;
  string content = 3;
  string type = 4;
  google.protobuf.Struct meta = 5;
  string idempotency_key = 6;
}

// Ответ на отправку сообщения
message SendMessageResponse {
  Message message = 1;
}

// Запрос подписки на обновления
message SubscribeUpdatesRequest {
  // Пустой запрос, userId и tenantId берутся из метаданных
  // Первое сообщение в stream - Update с eventType="connection.established" и connId в data
}

// Обновление (update)
message Update {
  string update_id = 1;
  string tenant_id = 2;
  string user_id = 3;
  string entity_id = 4;
  string event_type = 5;
  google.protobuf.Struct data = 6;
  double created_at = 7;
}

// Диалог
message Dialog {
  string dialog_id = 1;
  string tenant_id = 2;
  string name = 3;
  string created_by = 4;
  double created_at = 5;
  double updated_at = 6;
  google.protobuf.Struct meta = 7;
  DialogMember member = 8;
  Message last_message = 9;
}

// Участник диалога
message DialogMember {
  string user_id = 1;
  google.protobuf.Struct meta = 2;
  MemberState state = 3;
}

// Состояние участника
message MemberState {
  int32 unread_count = 1;
  double last_seen_at = 2;
  double last_message_at = 3;
  bool is_active = 4;
}

// Сообщение
message Message {
  string message_id = 1;
  string dialog_id = 2;
  string sender_id = 3;
  string type = 4;
  string content = 5;
  google.protobuf.Struct meta = 6;
  repeated MessageStatus statuses = 7;
  google.protobuf.Struct reaction_set = 8;
  SenderInfo sender_info = 9;
  double created_at = 10;
  string topic_id = 11;
  google.protobuf.Struct topic = 12;
}

// Статус сообщения
message MessageStatus {
  string user_id = 1;
  string status = 2;
  double read_at = 3;
  double created_at = 4;
}

// Информация об отправителе
message SenderInfo {
  string user_id = 1;
  string name = 2;
  double created_at = 3;
  google.protobuf.Struct meta = 4;
}

// Пагинация
message Pagination {
  int32 page = 1;
  int32 limit = 2;
  int32 total = 3;
  int32 pages = 4;
}
