/**
 * –¢–µ—Å—Ç–æ–≤—ã–π —Å–∫—Ä–∏–ø—Ç –¥–ª—è –ø—Ä–æ–≤–µ—Ä–∫–∏ gRPC –∫–ª–∏–µ–Ω—Ç–∞
 * 
 * –¢–µ—Å—Ç–∏—Ä—É–µ—Ç:
 * 1. –ü–æ–¥–∫–ª—é—á–µ–Ω–∏–µ –¥–≤—É—Ö –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª–µ–π
 * 2. –ü–æ–¥–ø–∏—Å–∫–∞ –æ–±–æ–∏—Ö –Ω–∞ updates
 * 3. –û—Ç–ø—Ä–∞–≤–∫–∞ —Å–æ–æ–±—â–µ–Ω–∏–π –æ–¥–Ω–∏–º –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª–µ–º
 * 4. –ü–æ–ª—É—á–µ–Ω–∏–µ updates –æ–±–æ–∏–º–∏ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è–º–∏
 */

import { Chat3GrpcClient } from './dist/index.js';

// –ö–æ–Ω—Ñ–∏–≥—É—Ä–∞—Ü–∏—è
const GRPC_SERVER_URL = process.env.GRPC_SERVER_URL || 'localhost:50051';
const API_KEY = process.env.API_KEY || '';
const TENANT_ID = process.env.TENANT_ID || 'tnt_default';
const USER_1_ID = process.env.USER_1_ID || 'user_1';
const USER_2_ID = process.env.USER_2_ID || 'user_2';
const DIALOG_ID = process.env.DIALOG_ID || '';

if (!API_KEY) {
  console.error('‚ùå API_KEY is required. Set it via environment variable or .env file');
  process.exit(1);
}

if (!DIALOG_ID) {
  console.error('‚ùå DIALOG_ID is required. Set it via environment variable or .env file');
  console.error('üí° Create a dialog first and set DIALOG_ID to its ID');
  process.exit(1);
}

console.log('üöÄ Starting gRPC test...');
console.log(`üì° gRPC Server: ${GRPC_SERVER_URL}`);
console.log(`üë§ User 1: ${USER_1_ID}`);
console.log(`üë§ User 2: ${USER_2_ID}`);
console.log(`üí¨ Dialog ID: ${DIALOG_ID}`);
console.log('');

// –°–æ–∑–¥–∞–µ–º –∫–ª–∏–µ–Ω—Ç—ã –¥–ª—è –¥–≤—É—Ö –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª–µ–π
const client1 = new Chat3GrpcClient({
  url: GRPC_SERVER_URL,
  apiKey: API_KEY,
  tenantId: TENANT_ID,
  userId: USER_1_ID
});

const client2 = new Chat3GrpcClient({
  url: GRPC_SERVER_URL,
  apiKey: API_KEY,
  tenantId: TENANT_ID,
  userId: USER_2_ID
});

// –ü–µ—Ä–µ–º–µ–Ω–Ω—ã–µ –¥–ª—è –æ—Ç—Å–ª–µ–∂–∏–≤–∞–Ω–∏—è —Å–æ—Å—Ç–æ—è–Ω–∏—è
let client1ConnId = null;
let client2ConnId = null;
let messagesSent = 0;
let client1UpdatesReceived = 0;
let client2UpdatesReceived = 0;

// –ü–æ–¥–ø–∏—Å–∫–∞ User 1 –Ω–∞ updates
console.log(`üì° [${USER_1_ID}] Subscribing to updates...`);
const unsubscribe1 = client1.subscribeUpdates((update) => {
  client1UpdatesReceived++;
  
  // –õ–æ–≥–∏—Ä—É–µ–º –≤–µ—Å—å update –¥–ª—è –æ—Ç–ª–∞–¥–∫–∏
  if (client1UpdatesReceived === 1) {
    console.log(`üì© [${USER_1_ID}] First update received:`, JSON.stringify(update, null, 2));
  }
  
  const eventType = update.event_type || update.eventType || '';
  if (eventType === 'connection.established') {
    // –ü–æ–ª—É—á–∞–µ–º connId –∏–∑ data (Struct —Ñ–æ—Ä–º–∞—Ç –≤ gRPC)
    let data = {};
    if (update.data && update.data.fields) {
      // Struct —Ñ–æ—Ä–º–∞—Ç - –ø–æ–ª—è –∏–º–µ—é—Ç —Å—Ç—Ä—É–∫—Ç—É—Ä—É { stringValue, numberValue, boolValue, listValue, structValue }
      data = Object.fromEntries(
        Object.entries(update.data.fields).map(([key, value]) => [
          key,
          value.stringValue !== undefined ? value.stringValue :
          value.numberValue !== undefined ? value.numberValue :
          value.boolValue !== undefined ? value.boolValue :
          value.listValue !== undefined ? value.listValue :
          value.structValue !== undefined ? value.structValue :
          value
        ])
      );
    } else if (update.data) {
      // –ü—Ä–æ—Å—Ç–æ–π –æ–±—ä–µ–∫—Ç
      data = update.data;
    }
    client1ConnId = data.conn_id || null;
    console.log(`‚úÖ [${USER_1_ID}] Connected! connId: ${client1ConnId}, data:`, JSON.stringify(data, null, 2));
  } else if (eventType) {
    console.log(`üì© [${USER_1_ID}] Update #${client1UpdatesReceived}: ${eventType}`);
    let data = {};
    if (update.data && update.data.fields) {
      data = Object.fromEntries(
        Object.entries(update.data.fields).map(([key, value]) => [
          key,
          value.stringValue || value.numberValue || value.boolValue || value.listValue || value.structValue || value
        ])
      );
    } else {
      data = update.data || {};
    }
    if (data.message) {
        const msg = data.message.fields ? Object.fromEntries(
          Object.entries(data.message.fields).map(([key, value]) => [
            key,
            value.stringValue || value.numberValue || value.boolValue || value.listValue || value.structValue || value
          ])
        ) : data.message;
      console.log(`   üí¨ Message: ${(msg.content || '').substring(0, 50)}...`);
      console.log(`   üë§ From: ${msg.sender_id || ''}`);
    }
  } else {
    console.log(`üì© [${USER_1_ID}] Update #${client1UpdatesReceived}: (no event_type), update keys:`, Object.keys(update || {}));
  }
});

// –ü–æ–¥–ø–∏—Å–∫–∞ User 2 –Ω–∞ updates
console.log(`üì° [${USER_2_ID}] Subscribing to updates...`);
const unsubscribe2 = client2.subscribeUpdates((update) => {
  client2UpdatesReceived++;
  
  const eventType = update.event_type || update.eventType || '';
  if (eventType === 'connection.established') {
    // –ü–æ–ª—É—á–∞–µ–º connId –∏–∑ data (Struct —Ñ–æ—Ä–º–∞—Ç –≤ gRPC)
    let data = {};
    if (update.data && update.data.fields) {
      // Struct —Ñ–æ—Ä–º–∞—Ç - –ø–æ–ª—è –∏–º–µ—é—Ç —Å—Ç—Ä—É–∫—Ç—É—Ä—É { stringValue, numberValue, boolValue, listValue, structValue }
      data = Object.fromEntries(
        Object.entries(update.data.fields).map(([key, value]) => [
          key,
          value.stringValue !== undefined ? value.stringValue :
          value.numberValue !== undefined ? value.numberValue :
          value.boolValue !== undefined ? value.boolValue :
          value.listValue !== undefined ? value.listValue :
          value.structValue !== undefined ? value.structValue :
          value
        ])
      );
    } else if (update.data) {
      // –ü—Ä–æ—Å—Ç–æ–π –æ–±—ä–µ–∫—Ç
      data = update.data;
    }
    client2ConnId = data.conn_id || null;
    console.log(`‚úÖ [${USER_2_ID}] Connected! connId: ${client2ConnId}, data:`, JSON.stringify(data, null, 2));
  } else if (eventType) {
    console.log(`üì© [${USER_2_ID}] Update #${client2UpdatesReceived}: ${eventType}`);
    let data = {};
    if (update.data && update.data.fields) {
      data = Object.fromEntries(
        Object.entries(update.data.fields).map(([key, value]) => [
          key,
          value.stringValue || value.numberValue || value.boolValue || value.listValue || value.structValue || value
        ])
      );
    } else {
      data = update.data || {};
    }
    if (data.message) {
        const msg = data.message.fields ? Object.fromEntries(
          Object.entries(data.message.fields).map(([key, value]) => [
            key,
            value.stringValue || value.numberValue || value.boolValue || value.listValue || value.structValue || value
          ])
        ) : data.message;
      console.log(`   üí¨ Message: ${(msg.content || '').substring(0, 50)}...`);
      console.log(`   üë§ From: ${msg.sender_id || ''}`);
    }
  } else {
    console.log(`üì© [${USER_2_ID}] Update #${client2UpdatesReceived}: (no event_type), update keys:`, Object.keys(update || {}));
  }
});

// –ñ–¥–µ–º –ø–æ–¥–∫–ª—é—á–µ–Ω–∏—è –æ–±–æ–∏—Ö –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª–µ–π
await new Promise(resolve => setTimeout(resolve, 1000));

if (!client1ConnId || !client2ConnId) {
  console.error('‚ùå Failed to establish connections');
  process.exit(1);
}

console.log('');
console.log('‚úÖ Both users connected!');
console.log('');

// –§—É–Ω–∫—Ü–∏—è –¥–ª—è –æ—Ç–ø—Ä–∞–≤–∫–∏ —Å–æ–æ–±—â–µ–Ω–∏–π
async function sendMessages() {
  const messages = [
    '–ü—Ä–∏–≤–µ—Ç! –≠—Ç–æ —Ç–µ—Å—Ç–æ–≤–æ–µ —Å–æ–æ–±—â–µ–Ω–∏–µ #1',
    '–¢–µ—Å—Ç–æ–≤–æ–µ —Å–æ–æ–±—â–µ–Ω–∏–µ #2',
    '–¢–µ—Å—Ç–æ–≤–æ–µ —Å–æ–æ–±—â–µ–Ω–∏–µ #3'
  ];

  for (let i = 0; i < messages.length; i++) {
    try {
      console.log(`üì§ [${USER_1_ID}] Sending message #${i + 1}...`);
      const response = await client1.sendMessage(DIALOG_ID, USER_1_ID, {
        content: messages[i],
        type: 'internal.text',
        meta: { test: true, messageNumber: i + 1 }
      });
      
      messagesSent++;
      console.log(`‚úÖ [${USER_1_ID}] Message sent! messageId: ${response.message?.message_id}`);
      
      // –ñ–¥–µ–º –Ω–µ–º–Ω–æ–≥–æ –º–µ–∂–¥—É —Å–æ–æ–±—â–µ–Ω–∏—è–º–∏
      await new Promise(resolve => setTimeout(resolve, 1000));
    } catch (error) {
      console.error(`‚ùå [${USER_1_ID}] Error sending message:`, error.message);
    }
  }
}

// –§—É–Ω–∫—Ü–∏—è –¥–ª—è –ø–æ–ª—É—á–µ–Ω–∏—è –¥–∏–∞–ª–æ–≥–æ–≤ (–¥–ª—è –ø—Ä–æ–≤–µ—Ä–∫–∏)
async function testGetDialogs() {
  try {
    console.log('');
    console.log(`üìã [${USER_1_ID}] Getting dialogs...`);
    const response = await client1.getUserDialogs({
      page: 1,
      limit: 10,
      includeLastMessage: true
    });
    
    console.log(`‚úÖ [${USER_1_ID}] Found ${response.dialogs?.length || 0} dialogs`);
    if (response.dialogs && response.dialogs.length > 0) {
      const dialog = response.dialogs[0];
      console.log(`   üí¨ First dialog: ${dialog.name || dialog.dialog_id}`);
    }
  } catch (error) {
    console.error(`‚ùå [${USER_1_ID}] Error getting dialogs:`, error.message);
  }
}

// –§—É–Ω–∫—Ü–∏—è –¥–ª—è –ø–æ–ª—É—á–µ–Ω–∏—è —Å–æ–æ–±—â–µ–Ω–∏–π (–¥–ª—è –ø—Ä–æ–≤–µ—Ä–∫–∏)
async function testGetMessages() {
  try {
    console.log('');
    console.log(`üìã [${USER_1_ID}] Getting messages from dialog ${DIALOG_ID}...`);
    const response = await client1.getDialogMessages(DIALOG_ID, {
      page: 1,
      limit: 10
    });
    
    console.log(`‚úÖ [${USER_1_ID}] Found ${response.messages?.length || 0} messages`);
    if (response.messages && response.messages.length > 0) {
      const msg = response.messages[0];
      console.log(`   üí¨ Last message: ${msg.content?.substring(0, 50)}...`);
    }
  } catch (error) {
    console.error(`‚ùå [${USER_1_ID}] Error getting messages:`, error.message);
  }
}

// –ó–∞–ø—É—Å–∫–∞–µ–º —Ç–µ—Å—Ç—ã
async function runTests() {
  try {
    // –¢–µ—Å—Ç 1: –ü–æ–ª—É—á–µ–Ω–∏–µ –¥–∏–∞–ª–æ–≥–æ–≤
    await testGetDialogs();
    
    // –¢–µ—Å—Ç 2: –ü–æ–ª—É—á–µ–Ω–∏–µ —Å–æ–æ–±—â–µ–Ω–∏–π
    await testGetMessages();
    
    // –ñ–¥–µ–º –Ω–µ–º–Ω–æ–≥–æ
    await new Promise(resolve => setTimeout(resolve, 2000));
    
    // –¢–µ—Å—Ç 3: –û—Ç–ø—Ä–∞–≤–∫–∞ —Å–æ–æ–±—â–µ–Ω–∏–π
    console.log('');
    console.log('üì® Starting message sending test...');
    console.log('');
    await sendMessages();
    
    // –ñ–¥–µ–º –ø–æ–ª—É—á–µ–Ω–∏—è –≤—Å–µ—Ö updates
    console.log('');
    console.log('‚è≥ Waiting for updates to be received...');
    await new Promise(resolve => setTimeout(resolve, 5000));
    
    // –†–µ–∑—É–ª—å—Ç–∞—Ç—ã
    console.log('');
    console.log('üìä Test Results:');
    console.log(`   üì§ Messages sent: ${messagesSent}`);
    console.log(`   üì© [${USER_1_ID}] Updates received: ${client1UpdatesReceived}`);
    console.log(`   üì© [${USER_2_ID}] Updates received: ${client2UpdatesReceived}`);
    console.log('');
    
    if (messagesSent > 0 && client1UpdatesReceived > 1 && client2UpdatesReceived > 1) {
      console.log('‚úÖ Test PASSED! Both users received updates.');
    } else {
      console.log('‚ö†Ô∏è  Test completed, but some updates may have been missed.');
      console.log('   Check if update-worker is running and processing events.');
    }
    
  } catch (error) {
    console.error('‚ùå Test error:', error);
  } finally {
    // –û—Ç–º–µ–Ω—è–µ–º –ø–æ–¥–ø–∏—Å–∫–∏
    console.log('');
    console.log('üõë Unsubscribing...');
    unsubscribe1();
    unsubscribe2();
    
    // –ñ–¥–µ–º –Ω–µ–º–Ω–æ–≥–æ –ø–µ—Ä–µ–¥ –∑–∞–≤–µ—Ä—à–µ–Ω–∏–µ–º
    await new Promise(resolve => setTimeout(resolve, 1000));
    console.log('‚úÖ Done!');
    process.exit(0);
  }
}

// –û–±—Ä–∞–±–æ—Ç–∫–∞ –∑–∞–≤–µ—Ä—à–µ–Ω–∏—è
process.on('SIGINT', async () => {
  console.log('');
  console.log('üõë Shutting down...');
  unsubscribe1();
  unsubscribe2();
  await new Promise(resolve => setTimeout(resolve, 500));
  process.exit(0);
});

// –ó–∞–ø—É—Å–∫ —Ç–µ—Å—Ç–æ–≤
runTests().catch((error) => {
  console.error('‚ùå Fatal error:', error);
  process.exit(1);
});
