/**
 * TypeScript –∫–ª–∏–µ–Ω—Ç –¥–ª—è Chat3 gRPC User Service
 */
import * as grpc from '@grpc/grpc-js';
import * as protoLoader from '@grpc/proto-loader';
import path from 'path';
import { fileURLToPath } from 'url';

const __filename = fileURLToPath(import.meta.url);
const __dirname = path.dirname(__filename);

/**
 * –û–ø—Ü–∏–∏ –¥–ª—è —Å–æ–∑–¥–∞–Ω–∏—è –∫–ª–∏–µ–Ω—Ç–∞ Chat3 gRPC
 */
export interface Chat3GrpcClientOptions {
  /** URL gRPC —Å–µ—Ä–≤–µ—Ä–∞ (–Ω–∞–ø—Ä–∏–º–µ—Ä, `localhost:50051`) */
  url: string;
  /** API –∫–ª—é—á –¥–ª—è –∞—É—Ç–µ–Ω—Ç–∏—Ñ–∏–∫–∞—Ü–∏–∏ */
  apiKey: string;
  /** ID —Ç–µ–Ω–∞–Ω—Ç–∞ */
  tenantId: string;
  /** ID –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è */
  userId: string;
}

/**
 * –û–ø—Ü–∏–∏ –¥–ª—è –ø–æ–ª—É—á–µ–Ω–∏—è –¥–∏–∞–ª–æ–≥–æ–≤ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è
 */
export interface GetUserDialogsOptions {
  /** –ù–æ–º–µ—Ä —Å—Ç—Ä–∞–Ω–∏—Ü—ã (–ø–æ —É–º–æ–ª—á–∞–Ω–∏—é: 1) */
  page?: number;
  /** –ö–æ–ª–∏—á–µ—Å—Ç–≤–æ —ç–ª–µ–º–µ–Ω—Ç–æ–≤ –Ω–∞ —Å—Ç—Ä–∞–Ω–∏—Ü–µ (–ø–æ —É–º–æ–ª—á–∞–Ω–∏—é: 10) */
  limit?: number;
  /** –§–∏–ª—å—Ç—Ä –≤ —Ñ–æ—Ä–º–∞—Ç–µ –æ–ø–µ—Ä–∞—Ç–æ—Ä–æ–≤ (–Ω–∞–ø—Ä–∏–º–µ—Ä, `(tenantId,eq,tnt_default)`) */
  filter?: string;
  /** –°–æ—Ä—Ç–∏—Ä–æ–≤–∫–∞ –≤ —Ñ–æ—Ä–º–∞—Ç–µ JSON (–Ω–∞–ø—Ä–∏–º–µ—Ä, `{"created_at": -1}`) */
  sort?: string;
  /** –í–∫–ª—é—á–∏—Ç—å –ø–æ—Å–ª–µ–¥–Ω–µ–µ —Å–æ–æ–±—â–µ–Ω–∏–µ –≤ –∫–∞–∂–¥—ã–π –¥–∏–∞–ª–æ–≥ */
  includeLastMessage?: boolean;
}

/**
 * –û–ø—Ü–∏–∏ –¥–ª—è –ø–æ–ª—É—á–µ–Ω–∏—è —Å–æ–æ–±—â–µ–Ω–∏–π –¥–∏–∞–ª–æ–≥–∞
 */
export interface GetDialogMessagesOptions {
  /** –ù–æ–º–µ—Ä —Å—Ç—Ä–∞–Ω–∏—Ü—ã (–ø–æ —É–º–æ–ª—á–∞–Ω–∏—é: 1) */
  page?: number;
  /** –ö–æ–ª–∏—á–µ—Å—Ç–≤–æ —ç–ª–µ–º–µ–Ω—Ç–æ–≤ –Ω–∞ —Å—Ç—Ä–∞–Ω–∏—Ü–µ (–ø–æ —É–º–æ–ª—á–∞–Ω–∏—é: 10) */
  limit?: number;
  /** –§–∏–ª—å—Ç—Ä –≤ —Ñ–æ—Ä–º–∞—Ç–µ –æ–ø–µ—Ä–∞—Ç–æ—Ä–æ–≤ */
  filter?: string;
  /** –°–æ—Ä—Ç–∏—Ä–æ–≤–∫–∞ –≤ —Ñ–æ—Ä–º–∞—Ç–µ JSON */
  sort?: string;
}

/**
 * –û–ø—Ü–∏–∏ –¥–ª—è –æ—Ç–ø—Ä–∞–≤–∫–∏ —Å–æ–æ–±—â–µ–Ω–∏—è
 */
export interface SendMessageOptions {
  /** –°–æ–¥–µ—Ä–∂–∏–º–æ–µ —Å–æ–æ–±—â–µ–Ω–∏—è */
  content: string;
  /** –¢–∏–ø —Å–æ–æ–±—â–µ–Ω–∏—è (–ø–æ —É–º–æ–ª—á–∞–Ω–∏—é: `internal.text`) */
  type?: string;
  /** –ú–µ—Ç–∞–¥–∞–Ω–Ω—ã–µ —Å–æ–æ–±—â–µ–Ω–∏—è (–ø—Ä–æ–∏–∑–≤–æ–ª—å–Ω—ã–π –æ–±—ä–µ–∫—Ç) */
  meta?: Record<string, any>;
  /** –ö–ª—é—á –∏–¥–µ–º–ø–æ—Ç–µ–Ω—Ç–Ω–æ—Å—Ç–∏ –¥–ª—è –ø—Ä–µ–¥–æ—Ç–≤—Ä–∞—â–µ–Ω–∏—è –¥—É–±–ª–∏—Ä–æ–≤–∞–Ω–∏—è —Å–æ–æ–±—â–µ–Ω–∏–π */
  idempotencyKey?: string;
}

/**
 * –û–ø—Ü–∏–∏ –¥–ª—è —É—Å—Ç–∞–Ω–æ–≤–∫–∏ —Å—Ç–∞—Ç—É—Å–∞ —Å–æ–æ–±—â–µ–Ω–∏—è
 */
export interface SetMessageStatusOptions {
  /** ID –¥–∏–∞–ª–æ–≥–∞ */
  dialogId: string;
  /** ID —Å–æ–æ–±—â–µ–Ω–∏—è */
  messageId: string;
  /** –°—Ç–∞—Ç—É—Å —Å–æ–æ–±—â–µ–Ω–∏—è: `unread`, `delivered` –∏–ª–∏ `read` */
  status: 'unread' | 'delivered' | 'read';
}

/**
 * –û–ø—Ü–∏–∏ –¥–ª—è —É—Å—Ç–∞–Ω–æ–≤–∫–∏/—Å–Ω—è—Ç–∏—è —Ä–µ–∞–∫—Ü–∏–∏
 */
export interface SetMessageReactionOptions {
  /** ID –¥–∏–∞–ª–æ–≥–∞ */
  dialogId: string;
  /** ID —Å–æ–æ–±—â–µ–Ω–∏—è */
  messageId: string;
  /** –†–µ–∞–∫—Ü–∏—è (—ç–º–æ–¥–∑–∏ –∏–ª–∏ —Ç–µ–∫—Å—Ç, –Ω–∞–ø—Ä–∏–º–µ—Ä, "üëç", "‚ù§Ô∏è") */
  reaction: string;
  /** –£—Å—Ç–∞–Ω–æ–≤–∏—Ç—å (true) –∏–ª–∏ —Å–Ω—è—Ç—å (false) —Ä–µ–∞–∫—Ü–∏—é. –ü–æ —É–º–æ–ª—á–∞–Ω–∏—é: true */
  set?: boolean;
}

/**
 * –û–ø—Ü–∏–∏ –¥–ª—è –æ—Ç–ø—Ä–∞–≤–∫–∏ –∏–Ω–¥–∏–∫–∞—Ç–æ—Ä–∞ –ø–µ—á–∞—Ç–∏
 */
export interface SendTypingIndicatorOptions {
  /** ID –¥–∏–∞–ª–æ–≥–∞ */
  dialogId: string;
}

// –ó–∞–≥—Ä—É–∑–∫–∞ proto —Ñ–∞–π–ª–∞ (–∏—Å–ø–æ–ª—å–∑—É–µ–º –æ–±—â–∏–π proto –ø–∞–∫–µ—Ç)
// __dirname —É–∫–∞–∑—ã–≤–∞–µ—Ç –Ω–∞ dist/, –ø–æ—ç—Ç–æ–º—É –∏—Å–ø–æ–ª—å–∑—É–µ–º ../../../packages-shared
const PROTO_PATH = path.join(__dirname, '../../../packages-shared/proto/src/chat3_user.proto');
const packageDefinition = protoLoader.loadSync(PROTO_PATH, {
  keepCase: true,
  longs: String,
  enums: String,
  defaults: true,
  oneofs: true
});

const chat3Proto = grpc.loadPackageDefinition(packageDefinition) as any;
const Chat3UserService = chat3Proto.chat3.user.Chat3UserService;

/**
 * TypeScript –∫–ª–∏–µ–Ω—Ç –¥–ª—è Chat3 gRPC User Service
 * 
 * –ü—Ä–µ–¥–æ—Å—Ç–∞–≤–ª—è–µ—Ç —É–¥–æ–±–Ω—ã–π –∏–Ω—Ç–µ—Ä—Ñ–µ–π—Å –¥–ª—è —Ä–∞–±–æ—Ç—ã —Å gRPC —Å–µ—Ä–≤–∏—Å–æ–º –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª–µ–π Chat3.
 * –ü–æ–¥–¥–µ—Ä–∂–∏–≤–∞–µ—Ç –ø–æ–ª—É—á–µ–Ω–∏–µ –¥–∏–∞–ª–æ–≥–æ–≤, —Å–æ–æ–±—â–µ–Ω–∏–π, –æ—Ç–ø—Ä–∞–≤–∫—É —Å–æ–æ–±—â–µ–Ω–∏–π –∏ –ø–æ–¥–ø–∏—Å–∫—É –Ω–∞ –æ–±–Ω–æ–≤–ª–µ–Ω–∏—è.
 * 
 * @example
 * ```typescript
 * const client = new Chat3GrpcClient({
 *   url: 'localhost:50051',
 *   apiKey: 'your-api-key',
 *   tenantId: 'tnt_default',
 *   userId: 'user_123'
 * });
 * 
 * const dialogs = await client.getUserDialogs({ page: 1, limit: 10 });
 * ```
 */
export class Chat3GrpcClient {
  private client: any;
  private metadata: grpc.Metadata;

  /**
   * –°–æ–∑–¥–∞–µ—Ç –Ω–æ–≤—ã–π —ç–∫–∑–µ–º–ø–ª—è—Ä –∫–ª–∏–µ–Ω—Ç–∞ Chat3 gRPC
   * 
   * @param options - –û–ø—Ü–∏–∏ –¥–ª—è —Å–æ–∑–¥–∞–Ω–∏—è –∫–ª–∏–µ–Ω—Ç–∞
   */
  constructor(options: Chat3GrpcClientOptions) {
    this.client = new Chat3UserService(
      options.url,
      grpc.credentials.createInsecure()
    );

    // –°–æ–∑–¥–∞–µ–º –º–µ—Ç–∞–¥–∞–Ω–Ω—ã–µ
    this.metadata = new grpc.Metadata();
    this.metadata.add('x-api-key', options.apiKey);
    this.metadata.add('x-tenant-id', options.tenantId);
    this.metadata.add('x-user-id', options.userId);
  }

  /**
   * –ü–æ–ª—É—á–∏—Ç—å –¥–∏–∞–ª–æ–≥–∏ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è
   * 
   * –í—ã–ø–æ–ª–Ω—è–µ—Ç –∑–∞–ø—Ä–æ—Å –∫ gRPC —Å–µ—Ä–≤–µ—Ä—É –¥–ª—è –ø–æ–ª—É—á–µ–Ω–∏—è —Å–ø–∏—Å–∫–∞ –¥–∏–∞–ª–æ–≥–æ–≤ –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è
   * —Å –ø–æ–¥–¥–µ—Ä–∂–∫–æ–π –ø–∞–≥–∏–Ω–∞—Ü–∏–∏, —Ñ–∏–ª—å—Ç—Ä–∞—Ü–∏–∏ –∏ —Å–æ—Ä—Ç–∏—Ä–æ–≤–∫–∏.
   * 
   * @param options - –û–ø—Ü–∏–∏ –¥–ª—è –ø–æ–ª—É—á–µ–Ω–∏—è –¥–∏–∞–ª–æ–≥–æ–≤
   * @returns –ü—Ä–æ–º–∏—Å —Å –æ—Ç–≤–µ—Ç–æ–º, —Å–æ–¥–µ—Ä–∂–∞—â–∏–º –º–∞—Å—Å–∏–≤ –¥–∏–∞–ª–æ–≥–æ–≤ –∏ –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—é –æ –ø–∞–≥–∏–Ω–∞—Ü–∏–∏
   * 
   * @example
   * ```typescript
   * const response = await client.getUserDialogs({
   *   page: 1,
   *   limit: 20,
   *   includeLastMessage: true,
   *   filter: '(tenantId,eq,tnt_default)'
   * });
   * console.log(response.dialogs); // –ú–∞—Å—Å–∏–≤ –¥–∏–∞–ª–æ–≥–æ–≤
   * console.log(response.pagination); // –ò–Ω—Ñ–æ—Ä–º–∞—Ü–∏—è –æ –ø–∞–≥–∏–Ω–∞—Ü–∏–∏
   * ```
   */
  async getUserDialogs(options: GetUserDialogsOptions = {}): Promise<any> {
    return new Promise((resolve, reject) => {
      this.client.GetUserDialogs(
        {
          page: options.page || 1,
          limit: options.limit || 10,
          filter: options.filter || '',
          sort: options.sort || '',
          include_last_message: options.includeLastMessage || false
        },
        this.metadata,
        (error: grpc.ServiceError | null, response: any) => {
          if (error) {
            reject(error);
          } else {
            resolve(response);
          }
        }
      );
    });
  }

  /**
   * –ü–æ–ª—É—á–∏—Ç—å —Å–æ–æ–±—â–µ–Ω–∏—è –¥–∏–∞–ª–æ–≥–∞
   * 
   * –í—ã–ø–æ–ª–Ω—è–µ—Ç –∑–∞–ø—Ä–æ—Å –∫ gRPC —Å–µ—Ä–≤–µ—Ä—É –¥–ª—è –ø–æ–ª—É—á–µ–Ω–∏—è —Å–ø–∏—Å–∫–∞ —Å–æ–æ–±—â–µ–Ω–∏–π —É–∫–∞–∑–∞–Ω–Ω–æ–≥–æ –¥–∏–∞–ª–æ–≥–∞
   * —Å –ø–æ–¥–¥–µ—Ä–∂–∫–æ–π –ø–∞–≥–∏–Ω–∞—Ü–∏–∏, —Ñ–∏–ª—å—Ç—Ä–∞—Ü–∏–∏ –∏ —Å–æ—Ä—Ç–∏—Ä–æ–≤–∫–∏.
   * 
   * @param dialogId - ID –¥–∏–∞–ª–æ–≥–∞, —Å–æ–æ–±—â–µ–Ω–∏—è –∫–æ—Ç–æ—Ä–æ–≥–æ –Ω—É–∂–Ω–æ –ø–æ–ª—É—á–∏—Ç—å
   * @param options - –û–ø—Ü–∏–∏ –¥–ª—è –ø–æ–ª—É—á–µ–Ω–∏—è —Å–æ–æ–±—â–µ–Ω–∏–π
   * @returns –ü—Ä–æ–º–∏—Å —Å –æ—Ç–≤–µ—Ç–æ–º, —Å–æ–¥–µ—Ä–∂–∞—â–∏–º –º–∞—Å—Å–∏–≤ —Å–æ–æ–±—â–µ–Ω–∏–π –∏ –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—é –æ –ø–∞–≥–∏–Ω–∞—Ü–∏–∏
   * 
   * @example
   * ```typescript
   * const response = await client.getDialogMessages('dlg_abc123', {
   *   page: 1,
   *   limit: 50,
   *   sort: '{"created_at": -1}'
   * });
   * console.log(response.messages); // –ú–∞—Å—Å–∏–≤ —Å–æ–æ–±—â–µ–Ω–∏–π
   * ```
   */
  async getDialogMessages(
    dialogId: string,
    options: GetDialogMessagesOptions = {}
  ): Promise<any> {
    return new Promise((resolve, reject) => {
      this.client.GetDialogMessages(
        {
          dialog_id: dialogId,
          page: options.page || 1,
          limit: options.limit || 10,
          filter: options.filter || '',
          sort: options.sort || ''
        },
        this.metadata,
        (error: grpc.ServiceError | null, response: any) => {
          if (error) {
            reject(error);
          } else {
            resolve(response);
          }
        }
      );
    });
  }

  /**
   * –û—Ç–ø—Ä–∞–≤–∏—Ç—å —Å–æ–æ–±—â–µ–Ω–∏–µ –≤ –¥–∏–∞–ª–æ–≥
   * 
   * –í—ã–ø–æ–ª–Ω—è–µ—Ç –∑–∞–ø—Ä–æ—Å –∫ gRPC —Å–µ—Ä–≤–µ—Ä—É –¥–ª—è –æ—Ç–ø—Ä–∞–≤–∫–∏ –Ω–æ–≤–æ–≥–æ —Å–æ–æ–±—â–µ–Ω–∏—è –≤ —É–∫–∞–∑–∞–Ω–Ω—ã–π –¥–∏–∞–ª–æ–≥.
   * –ü–æ–¥–¥–µ—Ä–∂–∏–≤–∞–µ—Ç —Ä–∞–∑–ª–∏—á–Ω—ã–µ —Ç–∏–ø—ã —Å–æ–æ–±—â–µ–Ω–∏–π –∏ –º–µ—Ç–∞–¥–∞–Ω–Ω—ã–µ.
   * 
   * @param dialogId - ID –¥–∏–∞–ª–æ–≥–∞, –≤ –∫–æ—Ç–æ—Ä—ã–π –æ—Ç–ø—Ä–∞–≤–ª—è–µ—Ç—Å—è —Å–æ–æ–±—â–µ–Ω–∏–µ
   * @param senderId - ID –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è-–æ—Ç–ø—Ä–∞–≤–∏—Ç–µ–ª—è
   * @param options - –û–ø—Ü–∏–∏ –¥–ª—è –æ—Ç–ø—Ä–∞–≤–∫–∏ —Å–æ–æ–±—â–µ–Ω–∏—è (—Å–æ–¥–µ—Ä–∂–∏–º–æ–µ, —Ç–∏–ø, –º–µ—Ç–∞–¥–∞–Ω–Ω—ã–µ)
   * @returns –ü—Ä–æ–º–∏—Å —Å –æ—Ç–≤–µ—Ç–æ–º, —Å–æ–¥–µ—Ä–∂–∞—â–∏–º —Å–æ–∑–¥–∞–Ω–Ω–æ–µ —Å–æ–æ–±—â–µ–Ω–∏–µ
   * 
   * @example
   * ```typescript
   * const response = await client.sendMessage('dlg_abc123', 'user_123', {
   *   content: 'Hello, world!',
   *   type: 'internal.text',
   *   meta: { channel: 'whatsapp', priority: 'high' },
   *   idempotencyKey: 'msg_unique_key_123'
   * });
   * console.log(response.message); // –°–æ–∑–¥–∞–Ω–Ω–æ–µ —Å–æ–æ–±—â–µ–Ω–∏–µ
   * ```
   */
  async sendMessage(
    dialogId: string,
    senderId: string,
    options: SendMessageOptions
  ): Promise<any> {
    return new Promise((resolve, reject) => {
      // –ü—Ä–µ–æ–±—Ä–∞–∑—É–µ–º meta –≤ Struct —Ñ–æ—Ä–º–∞—Ç
      const meta = options.meta ? this.convertToStruct(options.meta) : undefined;

      this.client.SendMessage(
        {
          dialog_id: dialogId,
          sender_id: senderId,
          content: options.content,
          type: options.type || 'internal.text',
          meta: meta,
          idempotency_key: options.idempotencyKey || ''
        },
        this.metadata,
        (error: grpc.ServiceError | null, response: any) => {
          if (error) {
            reject(error);
          } else {
            resolve(response);
          }
        }
      );
    });
  }

  /**
   * –ü–æ–¥–ø–∏—Å–∞—Ç—å—Å—è –Ω–∞ –æ–±–Ω–æ–≤–ª–µ–Ω–∏—è –≤ —Ä–µ–∞–ª—å–Ω–æ–º –≤—Ä–µ–º–µ–Ω–∏ (server streaming)
   * 
   * –°–æ–∑–¥–∞–µ—Ç server streaming —Å–æ–µ–¥–∏–Ω–µ–Ω–∏–µ —Å gRPC —Å–µ—Ä–≤–µ—Ä–æ–º –¥–ª—è –ø–æ–ª—É—á–µ–Ω–∏—è –æ–±–Ω–æ–≤–ª–µ–Ω–∏–π
   * –≤ —Ä–µ–∞–ª—å–Ω–æ–º –≤—Ä–µ–º–µ–Ω–∏ (–Ω–æ–≤—ã–µ —Å–æ–æ–±—â–µ–Ω–∏—è, –∏–∑–º–µ–Ω–µ–Ω–∏—è —Å—Ç–∞—Ç—É—Å–æ–≤ –∏ —Ç.–¥.).
   * 
   * –ü–µ—Ä–≤–æ–µ —Å–æ–æ–±—â–µ–Ω–∏–µ –≤ –ø–æ—Ç–æ–∫–µ —Å–æ–¥–µ—Ä–∂–∏—Ç `event_type="connection.established"` –∏ `conn_id`
   * –≤ –ø–æ–ª–µ `data`, –∫–æ—Ç–æ—Ä—ã–π –º–æ–∂–Ω–æ –∏—Å–ø–æ–ª—å–∑–æ–≤–∞—Ç—å –¥–ª—è –∏–¥–µ–Ω—Ç–∏—Ñ–∏–∫–∞—Ü–∏–∏ —Å–æ–µ–¥–∏–Ω–µ–Ω–∏—è.
   * 
   * @param callback - –§—É–Ω–∫—Ü–∏—è-–æ–±—Ä–∞–±–æ—Ç—á–∏–∫, –≤—ã–∑—ã–≤–∞–µ–º–∞—è –ø—Ä–∏ –ø–æ–ª—É—á–µ–Ω–∏–∏ –∫–∞–∂–¥–æ–≥–æ –æ–±–Ω–æ–≤–ª–µ–Ω–∏—è
   * @returns –§—É–Ω–∫—Ü–∏—è –¥–ª—è –æ—Ç–º–µ–Ω—ã –ø–æ–¥–ø–∏—Å–∫–∏ –∏ –∑–∞–∫—Ä—ã—Ç–∏—è –ø–æ—Ç–æ–∫–∞
   * 
   * @example
   * ```typescript
   * const unsubscribe = client.subscribeUpdates((update) => {
   *   if (update.event_type === 'connection.established') {
   *     console.log('Connected with connId:', update.data.conn_id);
   *   } else if (update.event_type === 'message.created') {
   *     console.log('New message:', update.data);
   *   }
   * });
   * 
   * // –ü–æ–∑–∂–µ –æ—Ç–º–µ–Ω–∏—Ç—å –ø–æ–¥–ø–∏—Å–∫—É
   * unsubscribe();
   * ```
   */
  subscribeUpdates(callback: (update: any) => void): () => void {
    const call = this.client.SubscribeUpdates({}, this.metadata);

    call.on('data', (data: any) => {
      callback(data);
    });

    call.on('error', (error: grpc.ServiceError) => {
      console.error('[Chat3GrpcClient] Stream error:', error);
    });

    call.on('end', () => {
      console.log('[Chat3GrpcClient] Stream ended');
    });

    // –í–æ–∑–≤—Ä–∞—â–∞–µ–º —Ñ—É–Ω–∫—Ü–∏—é –¥–ª—è –æ—Ç–º–µ–Ω—ã –ø–æ–¥–ø–∏—Å–∫–∏
    return () => {
      call.cancel();
    };
  }

  /**
   * –£—Å—Ç–∞–Ω–æ–≤–∏—Ç—å —Å—Ç–∞—Ç—É—Å —Å–æ–æ–±—â–µ–Ω–∏—è
   * 
   * –í—ã–ø–æ–ª–Ω—è–µ—Ç –∑–∞–ø—Ä–æ—Å –∫ gRPC —Å–µ—Ä–≤–µ—Ä—É –¥–ª—è —É—Å—Ç–∞–Ω–æ–≤–∫–∏ —Å—Ç–∞—Ç—É—Å–∞ —Å–æ–æ–±—â–µ–Ω–∏—è (unread, delivered, read).
   * 
   * @param options - –û–ø—Ü–∏–∏ –¥–ª—è —É—Å—Ç–∞–Ω–æ–≤–∫–∏ —Å—Ç–∞—Ç—É—Å–∞
   * @returns –ü—Ä–æ–º–∏—Å —Å –æ—Ç–≤–µ—Ç–æ–º, —Å–æ–¥–µ—Ä–∂–∞—â–∏–º –æ–±–Ω–æ–≤–ª–µ–Ω–Ω—ã–π —Å—Ç–∞—Ç—É—Å –∏ —Å–æ–æ–±—â–µ–Ω–∏–µ
   * 
   * @example
   * ```typescript
   * const response = await client.setMessageStatus({
   *   dialogId: 'dlg_abc123',
   *   messageId: 'msg_xyz789',
   *   status: 'read'
   * });
   * console.log(response.status); // –û–±–Ω–æ–≤–ª–µ–Ω–Ω—ã–π —Å—Ç–∞—Ç—É—Å
   * console.log(response.message); // –û–±–Ω–æ–≤–ª–µ–Ω–Ω–æ–µ —Å–æ–æ–±—â–µ–Ω–∏–µ
   * ```
   */
  async setMessageStatus(options: SetMessageStatusOptions): Promise<any> {
    return new Promise((resolve, reject) => {
      this.client.SetMessageStatus(
        {
          dialog_id: options.dialogId,
          message_id: options.messageId,
          status: options.status
        },
        this.metadata,
        (error: grpc.ServiceError | null, response: any) => {
          if (error) {
            reject(error);
          } else {
            resolve(response);
          }
        }
      );
    });
  }

  /**
   * –£—Å—Ç–∞–Ω–æ–≤–∏—Ç—å –∏–ª–∏ —Å–Ω—è—Ç—å —Ä–µ–∞–∫—Ü–∏—é –Ω–∞ —Å–æ–æ–±—â–µ–Ω–∏–µ
   * 
   * –í—ã–ø–æ–ª–Ω—è–µ—Ç –∑–∞–ø—Ä–æ—Å –∫ gRPC —Å–µ—Ä–≤–µ—Ä—É –¥–ª—è —É—Å—Ç–∞–Ω–æ–≤–∫–∏ –∏–ª–∏ —Å–Ω—è—Ç–∏—è —Ä–µ–∞–∫—Ü–∏–∏ –Ω–∞ —Å–æ–æ–±—â–µ–Ω–∏–µ.
   * 
   * @param options - –û–ø—Ü–∏–∏ –¥–ª—è —É—Å—Ç–∞–Ω–æ–≤–∫–∏/—Å–Ω—è—Ç–∏—è —Ä–µ–∞–∫—Ü–∏–∏
   * @returns –ü—Ä–æ–º–∏—Å —Å –æ—Ç–≤–µ—Ç–æ–º, —Å–æ–¥–µ—Ä–∂–∞—â–∏–º –æ–±–Ω–æ–≤–ª–µ–Ω–Ω—ã–π –Ω–∞–±–æ—Ä —Ä–µ–∞–∫—Ü–∏–π
   * 
   * @example
   * ```typescript
   * // –£—Å—Ç–∞–Ω–æ–≤–∏—Ç—å —Ä–µ–∞–∫—Ü–∏—é
   * const response1 = await client.setMessageReaction({
   *   dialogId: 'dlg_abc123',
   *   messageId: 'msg_xyz789',
   *   reaction: 'üëç',
   *   set: true
   * });
   * 
   * // –°–Ω—è—Ç—å —Ä–µ–∞–∫—Ü–∏—é
   * const response2 = await client.setMessageReaction({
   *   dialogId: 'dlg_abc123',
   *   messageId: 'msg_xyz789',
   *   reaction: 'üëç',
   *   set: false
   * });
   * ```
   */
  async setMessageReaction(options: SetMessageReactionOptions): Promise<any> {
    return new Promise((resolve, reject) => {
      this.client.SetMessageReaction(
        {
          dialog_id: options.dialogId,
          message_id: options.messageId,
          reaction: options.reaction,
          set: options.set !== undefined ? options.set : true
        },
        this.metadata,
        (error: grpc.ServiceError | null, response: any) => {
          if (error) {
            reject(error);
          } else {
            resolve(response);
          }
        }
      );
    });
  }

  /**
   * –û—Ç–ø—Ä–∞–≤–∏—Ç—å –∏–Ω–¥–∏–∫–∞—Ç–æ—Ä –ø–µ—á–∞—Ç–∏
   * 
   * –í—ã–ø–æ–ª–Ω—è–µ—Ç –∑–∞–ø—Ä–æ—Å –∫ gRPC —Å–µ—Ä–≤–µ—Ä—É –¥–ª—è –æ—Ç–ø—Ä–∞–≤–∫–∏ –∏–Ω–¥–∏–∫–∞—Ç–æ—Ä–∞ –ø–µ—á–∞—Ç–∏ –≤ –¥–∏–∞–ª–æ–≥.
   * –£—á–∞—Å—Ç–Ω–∏–∫–∏ –¥–∏–∞–ª–æ–≥–∞ –ø–æ–ª—É—á–∞—Ç update —á–µ—Ä–µ–∑ SubscribeUpdates stream.
   * 
   * @param options - –û–ø—Ü–∏–∏ –¥–ª—è –æ—Ç–ø—Ä–∞–≤–∫–∏ –∏–Ω–¥–∏–∫–∞—Ç–æ—Ä–∞ –ø–µ—á–∞—Ç–∏
   * @returns –ü—Ä–æ–º–∏—Å —Å –æ—Ç–≤–µ—Ç–æ–º, —Å–æ–¥–µ—Ä–∂–∞—â–∏–º –∏–Ω—Ñ–æ—Ä–º–∞—Ü–∏—é –æ –ø—Ä–∏–Ω—è—Ç–æ–º —Å–∏–≥–Ω–∞–ª–µ
   * 
   * @example
   * ```typescript
   * const response = await client.sendTypingIndicator({
   *   dialogId: 'dlg_abc123'
   * });
   * console.log(`Typing indicator expires in ${response.expiresInMs}ms`);
   * ```
   */
  async sendTypingIndicator(options: SendTypingIndicatorOptions): Promise<any> {
    return new Promise((resolve, reject) => {
      this.client.SendTypingIndicator(
        {
          dialog_id: options.dialogId
        },
        this.metadata,
        (error: grpc.ServiceError | null, response: any) => {
          if (error) {
            reject(error);
          } else {
            resolve(response);
          }
        }
      );
    });
  }

  /**
   * –ü—Ä–µ–æ–±—Ä–∞–∑—É–µ—Ç –æ–±—ä–µ–∫—Ç –≤ Struct —Ñ–æ—Ä–º–∞—Ç –¥–ª—è gRPC (–¥–ª—è meta)
   * 
   * @internal
   * @param obj - –û–±—ä–µ–∫—Ç –¥–ª—è –ø—Ä–µ–æ–±—Ä–∞–∑–æ–≤–∞–Ω–∏—è
   * @returns –û–±—ä–µ–∫—Ç –≤ —Ñ–æ—Ä–º–∞—Ç–µ Struct
   */
  private convertToStruct(obj: Record<string, any>): any {
    // @grpc/proto-loader –∞–≤—Ç–æ–º–∞—Ç–∏—á–µ—Å–∫–∏ –ø—Ä–µ–æ–±—Ä–∞–∑—É–µ—Ç –æ–±—ä–µ–∫—Ç—ã –≤ Struct
    // –ï—Å–ª–∏ –Ω—É–∂–Ω–æ –±–æ–ª–µ–µ —Ç–æ—á–Ω–æ–µ –ø—Ä–µ–æ–±—Ä–∞–∑–æ–≤–∞–Ω–∏–µ, –º–æ–∂–Ω–æ –∏—Å–ø–æ–ª—å–∑–æ–≤–∞—Ç—å @grpc/grpc-js.Struct
    return obj;
  }
}
